--- a/lab04-ddos/topo-mnsec.yml
+++ b/lab04-ddos/topo-mnsec.yml
@@ -12,15 +12,21 @@ hosts:
   h2:
     ip: 192.168.1.2/24
     defaultRoute: via 192.168.1.254
+    postStart:
+      - /root/labs/lab04-ddos/lab-data/static/system_monitor.sh &
   h3:
     ip: 192.168.1.3/24
     defaultRoute: via 192.168.1.254
   h4:
     ip: 192.168.1.4/24
     defaultRoute: via 192.168.1.254
+    postStart:
+      - /root/labs/lab04-ddos/lab-data/static/system_monitor.sh &
   h5:
     ip: 192.168.1.5/24
     defaultRoute: via 192.168.1.254
+    postStart:
+      - /root/labs/lab04-ddos/lab-data/static/system_monitor.sh &
   h6:
     ip: 192.168.1.6/24
     defaultRoute: via 192.168.1.254
@@ -39,10 +45,14 @@ hosts:
   h9:
     ip: 192.168.1.9/24
     defaultRoute: via 192.168.1.254
+    postStart:
+      - /root/labs/lab04-ddos/lab-data/static/system_monitor.sh &
   srv1:
     ip: 192.168.1.254/24
     kind: k8spod
     image: hackinsdn/vuln-ssl-heartbleed:latest
+    postStart:
+      - echo "<html><body><h1>Welcome to HackInSDN.com</h1></body></html>" > /var/www/index.html
   srv2:
     kind: iptables
   c1:
@@ -64,6 +74,14 @@ hosts:
     - "8008:8008"
   c2c:
     ip: 192.168.1.250/24
+    publish:
+    - "5000:5000"
+    postStart:
+      - tar -czf /root/labs/lab04-ddos/lab-data/static/hping3-libs.tgz /lib/x86_64-linux-gnu/libpcap.so* /lib/x86_64-linux-gnu/libtcl8.6.so* /lib/x86_64-linux-gnu/libdbus-1.so*
+      - cp /usr/local/bin/slowloris /root/labs/lab04-ddos/lab-data/static/
+      - ln -s /usr/local/bin/slowloris /usr/bin/linux_verify
+      - cp /usr/sbin/hping3 /root/labs/lab04-ddos/lab-data/static/
+      - ln -s /usr/sbin/hping3 /usr/bin/linux_checker
 switches:
   s1:
     kind: ovs
